# AirQuality_IOT

./: CMakeLists.txt  CMakelists.txt  README.md
docs/: docker-compose.yaml  home_assistant_mqtt.yaml
include/: app_config.h  aq_filter.h  ha_publih.h  ha_publish.h  i2c_sensors.h  mq7_heater.h  mq_adc.h  net_config.h
src/: aq_filter.c  ha_publish.c  i2c_sensors.c  lwipopts.h  main.c  mq7_heater.c  mq_Adc.c
src/Networking/: mqtt.c  mqtt.h
src/Sensors/AHT20/: aht20.c  aht20.h
src/Sensors/MQ135/: mq135.c  mq135.h
src/Sensors/MQ7/: mq7.c  mq7.h
src/config/: FreeRTOSConfig.h  app_config.h  lwipopts.h
src/display/: oled.c  oled.h
src/networking/: mqtt_client.c  mqtt_client.h
src/processing/: aq_filter.c  aq_filter.h
src/rtos/: calibration_store.c  calibration_store.h  queues.h  tasks.c  tasks.h
src/sensors/: aht20.c  aht20.h  i2c_ll.c  i2c_ll.h  mq7_heater.c  mq7_heater.h  mq_adc.c  mq_adc.h
testing/TestAHT20/: CMakeLists.txt  main.cpp
testing/testAll/: CMakeLists.txt  main.cpp
testing/testMQ135/: CMakeLists.txt  main.cpp
testing/testMQ7/: CMakelists.txt  main.cpp
